--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
   - USER="icasimpan"
   - EMAIL="deploy@travis-ci.com"
   - DEPLOYMENT_USER="traviscibot"
-  - REPO="quicktasks-wordpress"
+  - REPO="quicktasks-${TOPIC_NAME}"
   - BUILD_DIR="public"
   - GH_REPO="github.com/${USER}/${REPO}.git"
   - HUGO_INSTALLER_URL="https://github.com/gohugoio/hugo/releases/download/v0.73.0/hugo_0.73.0_Linux-64bit.deb"
